<?xml version="1.0"?>
<package format="2">
  <name>mag_viz</name>
  <version>0.0.0</version>
  <description>Visualization nodes and RViz configurations for magnetic tracking.</description>
  <maintainer email="maintainer@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mag_core_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>mag_core_description</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>mag_core_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>mag_core_description</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
  <export/>
</package>
