<?xml version="1.0"?>
<package format="2">
  <name>mag_device_arm</name>
  <version>0.0.0</version>
  <description>Robot arm interfaces and tooling adapters for magnetic tracking.</description>
  <maintainer email="maintainer@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>mag_core_utils</build_depend>
  <build_depend>mag_core_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>mag_core_utils</exec_depend>
  <exec_depend>mag_core_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
  <export/>
</package>
